# Host-Header-Injection

./: .codex-config.yml  .env  .env.example  .gitignore  Agents.md  README.md  README_de.md  Tasks.md  cloudflare-ban.txt  config.yaml  docker-compose.yml
backend/: Agents.md  README.md  Tasks.md  __init__.py  config.py  db.py  ingest_jsonl.py  ingest_lists.py  main.py  models.py  pyproject.toml  schemas.py
backend/analysis/: compute.py
backend/routers/: __init__.py  aggregates.py  artifacts.py  probes.py  runner.py  runs.py
backend/runners/: __init__.py  authorized_runner.py  sequence_runner.py
backend/security/: __init__.py  auth.py
docker/: Dockerfile
frontend/: Agents.md  Tasks.md  next.config.mjs  package.json  theme.ts
frontend/components/: AppLayout.tsx  DirectoryPathsCard.tsx  DirectoryPathsHeatmap.tsx  HeatmapPanel.tsx  LanguageSwitcher.tsx  ProbeDrawer.tsx  RunBreadcrumbs.tsx  RunForm.tsx  RunSummaryCards.tsx  RunnerLogsPanel.tsx  RunsTable.tsx  SequenceGroupResultsPanel.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  format.ts  heatmap.ts  hooks.ts  i18n.tsx  types.ts
frontend/pages/: _app.tsx  index.tsx
frontend/pages/runs/: [id].tsx
frontend/styles/: globals.css
migrations/: 001_init.sql  002_sni.sql  003_runner_logs.sql  004_run_status.sql  005_run_concurrency.sql  006_run_combination_counts.sql  007_run_dns_mode.sql  008_auto_421_override.sql  008_run_sub_test_case.sql  009_probe_blacklist.sql  010_run_status_filters.sql  011_performance_indexes.sql  012_sequence_group.sql
